# game_of_life_py

./: .gitignore  README.md  pyproject.toml  requirements.txt
gameoflifeapi/: app.py
gameoflifeapi/api/: abstract_definitions.py  game_controller.py  persistance.py
gameoflifeapi/core/api/: controller.py  persistance.py
gameoflifeapi/core/api/abstract/: definitions.py
gameoflifeapi/core/classes/: game_cell.py  game_enums.py  game_life.py
gameoflifeapi/core/tools/: console_tools.py
gameoflifeapi/logic/: exceptions.py  game_flow_process.py  rules.py
gameoflifeapi/logic/data/: cell.py  dtos.py  field.py  state.py
gameoflifeqt/: app_qt.py
gameoflifeqt/widgets/: application_widget.py  control_widget.py  field_widget.py  new_game_popup_widget.py
gameoflifeqt/widgets/field/: button.py  field_widget.py
tests/api/: test_game_controller.py  test_persistance.py
tests/core/api/: test_persistance.py
tests/core/classes/: test_game_cell.py  test_game_life.py
tests/core/tools/: test_console_tools.py
tests/logic/: test_game_flow_process.py  test_rules.py
tests/logic/data/: test_cell.py  test_dtos.py  test_field.py  test_state.py
