[tool.poetry]
name = "game_of_life_py"
version = "0.1.0"
description = "Implementation of the Conway's Game of Life on the PyQt6"
authors = ["Oleksandr Kostenko <sanyokkua@gmail.com>"]
license = "GPL-3.0"
readme = "README.md"

packages = [{ include = "gameoflifeapi" }, { include = "gameoflifeqt" }]

[tool.poetry.dependencies]
python = "^3.10"
PyQt6 = "6.3.1"
PyQt6-Qt6 = "6.3.1"
PyQt6-sip = "13.4.0"


[tool.poetry.dev-dependencies]
autoflake = "1.4"
autopep8 = "1.6.0"
bandit = "1.7.4"
beartype = "0.10.4"
black = "22.6.0"
flake8 = "4.0.1"
flake8-broken-line = "0.4.0"
flake8-bugbear = "22.7.1"
flake8-builtins = "1.5.3"
flake8-docstrings = "1.6.0"
flake8-isort = "4.1.2.post0"
flake8-mutable = "1.2.0"
flake8-quotes = "3.3.1"
isort = "5.10.1"
mypy = "0.971"
mypy-extensions = "0.4.3"
pep8 = "1.7.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
gameoflifeconsole = 'gameoflifeapi.app:main'
gameoflifeqt = 'gameoflifeqt.app_qt:start_game'
